fix spacing

--- a/src/components/bg.module.scss
+++ b/src/components/bg.module.scss
@@ -4,9 +4,10 @@
 }
 
 .img-credit {
+  margin: 0 1rem;
   z-index: 1000;
   position: absolute;
   bottom: 0;
-  right: 1rem;
+  right: 0;
   text-align: right;
 }
